--- a/src/app.less
+++ b/src/app.less
@@ -96,12 +96,21 @@ a:link {
   > li {
     display: inline-block;
     margin-right: 10px;
+    color: #212121;
 
     > a {
-      background: #DDD;
-      border: solid 1px #666;
+      background: #EFEFEF;
+      //border: solid 1px #666;
       display: inline-block;
       padding: 5px;
+      border-radius: 2px;
+      color: #212121;
+      font-size: 14px;
+
+      &:hover {
+        background: #666666;
+        color: #FFFFFF;
+      }
     }
   }
 
