display an error message, if trying to remove variable with assignment

--- a/src/app.less
+++ b/src/app.less
@@ -134,3 +134,16 @@ a:link {
     min-height:100%;
   }
 }
+
+#delete-assigned-var {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  vertical-align: middle;
+  text-align: center;
+  font-size: 14px;
+  background-color: #ffcccc;
+  border: 1px solid #ff0000;
+}
