added input fields for user info

--- a/src/app.less
+++ b/src/app.less
@@ -238,6 +238,10 @@ input, select {
   cursor: pointer;
 }
 
-.service-input-wrapper {
+.input-wrapper {
   display: block;
+}
+
+#login-label {
+  cursor: pointer
 }
