--- a/src/app.less
+++ b/src/app.less
@@ -326,3 +326,48 @@ select {
   text-align: center;
   margin: 5px;
 }
+
+#dynamicInputDialog {
+  border-radius: 10px;
+  border: 1px solid hsl(225, 10%, 75%);
+  padding: 10px;
+  max-width: 400px;
+  width: 100%;
+  word-wrap: break-word;
+}
+
+#userTaskDialogIcon {
+  font-size: 36px;
+  line-height: 36px;
+  height: 36px;
+}
+
+#dialogMessage {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  padding: 5px;
+  border-bottom: 1px solid hsl(225, 10%, 75%);
+  white-space: normal;
+}
+
+.form-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form-group label {
+  flex: 1;
+  text-align: left;
+}
+
+.form-group input,
+.form-group textarea {
+  flex: 2;
+  padding: 5px;
+}
+
+#submit-button{
+  display: block;
+  margin: 10px auto 0 auto;
+}
