add result label to service entry

--- a/src/app.less
+++ b/src/app.less
@@ -309,7 +309,7 @@ select {
   align-items: center;
 }
 
-#parameters-header {
+#entry-group-header {
   margin-bottom: 5px;
   margin-left: 15px;
   margin-right: 5px;
