add service icon to serviceView header

--- a/src/app.less
+++ b/src/app.less
@@ -242,6 +242,11 @@ a:link {
 #useAuthCheckbox {
   height: 14px;
 }
+#serviceViewIcon {
+  font-size: 36px;
+  line-height: 36px;
+  height: 36px;
+}
 
 .add-item-button:hover {
   background: hsl(205, 100%, 50%);
