group services by uri

--- a/src/app.less
+++ b/src/app.less
@@ -232,14 +232,14 @@ a:link {
   display: inline-flex;
   padding: 0 3px;
 }
-#loadServiceButton, #use-auth-label {
+#load-services-button, .use-auth-label {
   font-size: 14px;
   color: hsl(225, 10%, 35%);
 }
-#loadServiceButton:hover {
+#load-services-button:hover {
   color: white;
 }
-#useAuthCheckbox {
+.use-auth-checkbox {
   height: 14px;
 }
 #serviceViewIcon {
@@ -309,7 +309,7 @@ select {
   width: 360px;
 }
 
-#auth-container {
+.auth-container {
   display: flex;
   align-items: center;
 }
@@ -379,4 +379,10 @@ select {
 
 [data-group-id="group-targets"] {
   margin-bottom: -1px;
+}
+
+.login-input-field {
+  width: 150px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
