adapt view-header to properties-panel-header

--- a/src/app.less
+++ b/src/app.less
@@ -175,6 +175,7 @@ a:link {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  max-height: 64px;
 }
 
 #service-view-header {
