hide feedback button on landing page

--- a/opaca-bpmn-editor/src/app.less
+++ b/opaca-bpmn-editor/src/app.less
@@ -78,7 +78,8 @@ a:link {
 
   &.with-diagram {
     .canvas,
-    .properties-panel-parent  {
+    .properties-panel-parent,
+    #feedback-button{
       display: block;
     }
   }
@@ -389,6 +390,7 @@ select {
 }
 
 #feedback-button {
+  display: none;
   position: fixed;
   bottom: 60px;
   left: 20px;
